--- a/src/static/css/responsive.css
+++ b/src/static/css/responsive.css
@@ -36,7 +36,7 @@
         width: 120px;
         height: 120px;
         margin-top: 50px;
-        border: 30px solid #f12365;
+        border: 30px solid var(--myblue);
     }
     .page-header h2 {
         font-size: 50px;
@@ -451,7 +451,7 @@
         top: 100px;
         left: 50%;
         transform: translateX(-50%);
-        color: #f12365;
+        color: var(--myblue);
         font-size: 18px;
         line-height: 18px;
     }
