--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,87 +1,237 @@
 {% macro render_css(render) %}
-<meta charset="utf-8">
+<meta charset="utf-8" />
 <title>Olugbenga -- My Portfolio</title>
-<meta name="description" content="Olugbenga -- My Portfolio">
-<meta name="keywords" content="creative, dark skin, freelancer, personal, portfolio, resume, vcard, cv">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="olugbenga">
+<meta name="description" content="Olugbenga -- My Portfolio" />
+<meta
+  name="keywords"
+  content="creative, dark skin, freelancer, personal, portfolio, resume, vcard, cv"
+/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="author" content="olugbenga" />
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="img/favicon.ico">
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+<link rel="shortcut icon" href="img/favicon.ico" />
+<link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+<link
+  rel="apple-touch-icon"
+  sizes="72x72"
+  href="img/apple-touch-icon-72x72.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="114x114"
+  href="img/apple-touch-icon-114x114.png"
+/>
 
 <!-- All CSS Called Here -->
-<link rel="stylesheet" href="{{ url_for ('static', filename='css/all.min.css')}}">
-<link rel="stylesheet" href="{{ url_for ('static', filename='css/bootstrap.min.css')}}">
-<link rel="stylesheet" href="{{ url_for ('static', filename='css/owl.carousel.min.css')}}">
-<link rel="stylesheet" href="{{ url_for ('static', filename='css/owl.theme.default.min.css')}}">
-<link rel="stylesheet" href="{{ url_for ('static', filename='css/magnific-popup.css')}}">
-<link rel="stylesheet" href="{{ url_for ('static', filename='css/style.css')}}">
-<link rel="stylesheet" href="{{ url_for ('static', filename='css/responsive.css')}}">
-<link rel="stylesheet" href="{{ url_for ('static', filename='css/myown.css')}}">
+<link
+  rel="stylesheet"
+  href="{{ url_for ('static', filename='css/all.min.css')}}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for ('static', filename='css/bootstrap.min.css')}}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for ('static', filename='css/owl.carousel.min.css')}}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for ('static', filename='css/owl.theme.default.min.css')}}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for ('static', filename='css/magnific-popup.css')}}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for ('static', filename='css/style.css')}}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for ('static', filename='css/responsive.css')}}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for ('static', filename='css/myown.css')}}"
+/>
 
-<meta name="theme-color" content="#175AEA">
+<meta name="theme-color" content="#175AEA" />
+{% endmacro %} {% macro render_js(render) %}
+<!-- All JS Called Here -->
+<script src="../static/js/vendor/modernizr-3.7.1.min.js"></script>
+<script src="../static/js/vendor/jquery-3.4.1.min.js"></script>
+<script src="../static/js/popper.min.js"></script>
+<script src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/owl.carousel.min.js"></script>
+<script src="../static/js/isotope.pkgd.min.js"></script>
+<script src="../static/js/imagesloaded.pkgd.min.js"></script>
+<script src="../static/js/jquery.magnific-popup.min.js"></script>
+<script src="../static/js/jquery.waypoints.min.js"></script>
+<script src="../static/js/jquery.counterup.min.js"></script>
+<script src="../static/js/particles.min.js"></script>
+<script src="../static/js/app.js"></script>
+<script src="../static/js/plugins.js"></script>
+<script src="../static/js/contact-form.js"></script>
+<script src="../static/js/main.js"></script>
+{% endmacro %} {% macro render_first(render) %}
+<!--[if IE]>
+  <p class="browserupgrade">
+    You are using an <strong>outdated</strong> browser. Please
+    <a href="https://browsehappy.com/">upgrade your browser</a> to improve your
+    experience and security.
+  </p>
+<![endif]-->
+
+<!-- Preloader -->
+<div class="loader-mask">
+  <div class="loader"></div>
+</div>
+<!-- Preloader end -->
+
+<!-- Custom Cursor -->
+<div class="pointer" id="pointer"></div>
+<!-- Custom Cursor end -->
+
+<!-- Sidebar -->
+<header class="sidebar">
+  <div class="backgroundShape-left"></div>
+  <div class="sidebar-content clearfix">
+    <!-- Main Menu Button -->
+    <div class="menu-icon">
+      <button id="nav_btn" class="pointer-open">
+        <i class="fas fa-bars"></i>
+      </button>
+    </div>
+    <!-- Main Menu Button End -->
+    <!-- My Image -->
+    <div class="author-image theme-bg-color">
+      <img src="img/author/1.png" alt="author-image" />
+    </div>
+    <!-- My Image End -->
+    <!-- My Social Links -->
+    <div class="author-social-icons text-center">
+      <ul>
+        <li>
+          <a href="#" class="pointer-href"><i class="fab fa-facebook-f"></i></a>
+        </li>
+        <!--li><a href="#" class="pointer-href"><i class="fab fa-twitter"></i></a></li-->
+        <!--li><a href="#" class="pointer-href"><i class="fas fa-basketball-ball"></i></a></li-->
+        <!--li><a href="#" class="pointer-href"><i class="fab fa-behance"></i></a></li-->
+        <li>
+          <a href="#" class="pointer-href"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+        </li>
+      </ul>
+    </div>
+    <!-- My Social Links End -->
+  </div>
+</header>
+<!-- Sidebar end -->
+{% endmacro %} {% macro render_menu(render) %}
+<!-- ======================================= -->
+<!-- MAIN MENU -->
+<!-- ======================================= -->
+<!-- Menu Container -->
+<nav class="menu-container overlay-bg">
+  <!-- Menu Close -->
+  <div class="menu-close pointer-large"></div>
+
+  <!-- Sub Menu Close -->
+  <div class="submenu-close-box">
+    <div class="submenu-close pointer-large">
+      <button type="button"><i class="fas fa-arrow-left"></i>BACK</button>
+    </div>
+  </div>
+  <!-- Sub Menu Close End -->
+
+  <!-- Main Menu -->
+  <ul class="main-menu overlay-bg">
+    <!-- Menu Box -->
+    <li class="nav-box mouseover-image-change active">
+      <a href="index.html" class="pointer-large nav-link">
+        <span class="nav-btn active" data-text="home">.home</span>
+      </a>
+      <div
+        class="mouseover-image"
+        style="background-image: url(img/nav-hover/home.png);"
+      ></div>
+    </li>
+    <!-- Menu Box End -->
+    <!-- Menu Box -->
+    <li class="nav-box mouseover-image-change">
+      <a href="about.html" class="pointer-large nav-link">
+        <span class="nav-btn" data-text="about">.about</span>
+      </a>
+      <div
+        class="mouseover-image"
+        style="background-image: url(img/nav-hover/about.png);"
+      ></div>
+    </li>
+    <!-- Menu Box End -->
+    <!-- Menu Box -->
+    <li class="nav-box mouseover-image-change">
+      <a href="resume.html" class="pointer-large nav-link">
+        <span class="nav-btn" data-text="resume">.resume</span>
+      </a>
+      <div
+        class="mouseover-image"
+        style="background-image: url(img/nav-hover/resume.png);"
+      ></div>
+    </li>
+    <!-- Menu Box End -->
+
+    <li class="nav-box mouseover-image-change">
+      <a href="portfolio.html" class="pointer-large nav-link">
+        <span class="nav-btn" data-text="resume">.portfolio</span>
+      </a>
+      <div
+        class="mouseover-image"
+        style="background-image: url(img/nav-hover/resume.png);"
+      ></div>
+    </li>
+
+    <!-- Menu Box -->
+    <li class="nav-box mouseover-image-change submenu-open">
+      <a class="pointer-large nav-link">
+        <span class="nav-btn" data-text="blog">.blog</span>
+      </a>
+      <!-- Sub Menu -->
+      <ul class="submenu">
+        <li class="nav-box">
+          <a href="blog.html" class="pointer-large">
+            <span class="nav-btn" data-text="blog">.blog</span>
+          </a>
+        </li>
+        <li class="nav-box">
+          <a href="blog-details.html" class="pointer-large">
+            <span class="nav-btn" data-text="blog details">.blog details</span>
+          </a>
+        </li>
+      </ul>
+      <!-- Submenu End -->
+      <div
+        class="mouseover-image"
+        style="background-image: url(img/nav-hover/blog.png);"
+      ></div>
+    </li>
+    <!-- Menu Box End -->
+    <!-- Menu Box -->
+    <li class="nav-box mouseover-image-change">
+      <a href="contact.html" class="pointer-large nav-link">
+        <span class="nav-btn" data-text="contact">.contact</span>
+      </a>
+      <div
+        class="mouseover-image"
+        style="background-image: url(img/nav-hover/contact.png);"
+      ></div>
+    </li>
+    <!-- Menu Box End -->
+  </ul>
+  <!-- Main Menu End -->
+</nav>
+<!-- Menu Container End -->
+
 {% endmacro %}
-
-{% macro render_js(render) %}
- <!-- All JS Called Here -->
- <script src="../static/js/vendor/modernizr-3.7.1.min.js"></script>
- <script src="../static/js/vendor/jquery-3.4.1.min.js"></script>
- <script src="../static/js/popper.min.js"></script>
- <script src="../static/js/bootstrap.min.js"></script>
- <script src="../static/js/owl.carousel.min.js"></script>
- <script src="../static/js/isotope.pkgd.min.js"></script>
- <script src="../static/js/imagesloaded.pkgd.min.js"></script>
- <script src="../static/js/jquery.magnific-popup.min.js"></script>
- <script src="../static/js/jquery.waypoints.min.js"></script>
- <script src="../static/js/jquery.counterup.min.js"></script>
- <script src="../static/js/particles.min.js"></script>
- <script src="../static/js/app.js"></script>
- <script src="../static/js/plugins.js"></script>
- <script src="../static/js/contact-form.js"></script>
- <script src="../static/js/main.js"></script>
- {% endmacro %}
-
-
- {% macro render_first(render) %}
-  <!--[if IE]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-    <![endif]-->
-
-    <!-- Preloader -->
-    <div class="loader-mask">
-        <div class="loader"></div>
-    </div> <!-- Preloader end -->
-
-    <!-- Custom Cursor -->
-    <div class="pointer" id="pointer"></div>
-    <!-- Custom Cursor end -->
-
-    <!-- Sidebar -->
-    <header class="sidebar">
-        <div class="backgroundShape-left"></div>
-        <div class="sidebar-content clearfix">
-            <!-- Main Menu Button -->
-            <div class="menu-icon">
-                <button id="nav_btn" class="pointer-open"><i class="fas fa-bars"></i></button>
-            </div> <!-- Main Menu Button End -->
-            <!-- My Image -->
-            <div class="author-image theme-bg-color">
-                <img src="img/author/1.png" alt="author-image">
-            </div> <!-- My Image End -->
-            <!-- My Social Links -->
-            <div class="author-social-icons text-center">
-                <ul>
-                    <li><a href="#" class="pointer-href"><i class="fab fa-facebook-f"></i></a></li>
-                    <!--li><a href="#" class="pointer-href"><i class="fab fa-twitter"></i></a></li-->
-                    <!--li><a href="#" class="pointer-href"><i class="fas fa-basketball-ball"></i></a></li-->
-                    <!--li><a href="#" class="pointer-href"><i class="fab fa-behance"></i></a></li-->
-                    <li><a href="#" class="pointer-href"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
-            </div> <!-- My Social Links End -->
-           
-        </div>
-    </header> <!-- Sidebar end -->
-    {% endmacro %}
