--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1082,9 +1082,11 @@ body.out .menu-container.active .submenu-close.active {
 }
 .home-title h3 {
     font-style: italic;
+    font-family: 'Roboto Mono', monospace;
 }
 .home-title h1 {
-	margin: 30px 0;
+    margin: 30px 0;
+    font-family: 'Open Sans', sans-serif !important;
 }
 .home-title h4 {
 	font-family: 'Poppins', sans-serif;
