--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -56,6 +56,15 @@
   rel="stylesheet"
   href="{{ url_for ('static', filename='css/myown.css')}}"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap"
+  rel="stylesheet"
+/>
+
+<link
+  href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap"
+  rel="stylesheet"
+/>
 
 <meta name="theme-color" content="#175AEA" />
 {% endmacro %} {% macro render_js(render) %}
