--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -15,7 +15,12 @@
         <!-- Page Header -->
         <div class="page-header">
             <h2>.<span>about</span></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut magna neque, pulvinar in orci in, pellentesque consequat tellus. Fusce mauris massa, pellentesque nec augue at, hendrerit rutrum ex. Cras venenatis vulputate nisi ut elementum.</p>
+            <p class="typewrite"
+            data-period="2000"
+            data-type='[ "Hi, I am Olugbenga Akeredolu.", "Below are my skills.", "Feel free to contact me for Project Ideas."]'
+          >
+            <span class="wrap"></span>
+        </p>
             <div class="template-btn">
                 <a href="contact.html" class="pointer-href">Hire me</a>
                 <a href="#" class="pointer-href">Download CV</a>
@@ -32,8 +37,8 @@
                             <div class="service-icon">
                                 <i class="fas fa-laptop-code"></i>
                             </div>
-                            <h4 class="body-font">Web Design</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, doloribus repellendus.</p>
+                            <h4 class="body-font">Web Development</h4>
+                            <p>Frontend and Backend development for your website using Flask, Wordpress, React.js, HTML | CSS, PHP, Django..</p>
                         </div>
                     </div>
                 </div>
@@ -41,10 +46,10 @@
                     <div class="single-service text-center">
                         <div class="service-content">
                             <div class="service-icon">
-                                <i class="fab fa-evernote"></i>
+                                <i class="fas fa-mobile"></i>
                             </div>
-                            <h4 class="body-font">Web Develop</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, doloribus repellendus.</p>
+                            <h4 class="body-font">Mobile Development</h4>
+                            <p>Mobile App development using Flutter,Swift,JAVA for Android and IOS..</p>
                         </div>
                     </div>
                 </div>
@@ -52,50 +57,167 @@
                     <div class="single-service text-center">
                         <div class="service-content">
                             <div class="service-icon">
-                                <i class="fas fa-drafting-compass"></i>
+                                <i class="fab fa-linux"></i>
                             </div>
-                            <h4 class="body-font">Branding</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, doloribus repellendus.</p>
+                            <h4 class="body-font">Linux Administration</h4>
+                            <p>Manage the operations of a computer system like maintain, enhance, create user account/report, taking backups using Linux tools and command-line interface tools..</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                    <div class="single-service text-center">
-                        <div class="service-content">
-                            <div class="service-icon">
-                                <i class="fas fa-anchor"></i>
+              
+        </div> <!-- Services End -->    
+        
+         <!--resume start-->
+         <div class="separator"></div>
+         <div class="resume-wrapper">
+             <div class="row">
+                 <div class="col-xl-8 col-lg-8">
+                     <div class="resume-content-left">
+                         <!-- Education Timeline -->
+                         <div class="education subtitle mb-70">
+                             <h3 class="mb-40">.<span>certifications</span></h3>
+                             <div class="timeline clearfix">
+                                 <div class="timeline-item clearfix">
+                                     <div class="timeline-left">
+                                         <h6 class="item-period body-font">2016</h6>
+                                         <span class="item-company"></span>
+                                     </div>
+                                     <div class="divider"></div>
+                                     <div class="timeline-right">
+                                         <h6 class="item-title body-font">compTIA Linux+</h6>
+                                         
+                                     </div>
+                                 </div>
+                                 <div class="timeline-item clearfix">
+                                     <div class="timeline-left">
+                                         <h6 class="item-period body-font">2016</h6>
+                                         <span class="item-company"></span>
+                                     </div>
+                                     <div class="divider"></div>
+                                     <div class="timeline-right">
+                                         <h6 class="item-title body-font">LPIC-1</h6>
+                                         
+                                     </div>
+                                 </div>
+
+                                 <div class="timeline-item clearfix">
+                                    <div class="timeline-left">
+                                        <h6 class="item-period body-font">2016</h6>
+                                        <span class="item-company"></span>
+                                    </div>
+                                    <div class="divider"></div>
+                                    <div class="timeline-right">
+                                        <h6 class="item-title body-font">SUSE Linux Administrator</h6>
+                                        
+                                    </div>
+                                </div>
+                             </div>
+                         </div>
+                         <!-- Timeline - Experience -->
+                         <div class="experience subtitle">
+                             <h3 class="mb-40">.<span>experience</span></h3>
+                             <div class="timeline clearfix">
+                                 <div class="timeline-item clearfix">
+                                     <div class="timeline-left">
+                                         <h6 class="item-period body-font">2015-Active</h6>
+                                         <span class="item-company">DENNY TECH UG</span>
+                                     </div>
+                                     <div class="divider"></div>
+                                     <div class="timeline-right">
+                                         <h6 class="item-title body-font">Linux Administrator</h6>
+                                         
+                                     </div>
+                                 </div>
+                                
+                                
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+                 <div class="col-xl-4 col-lg-4">
+                     <div class="resume-content-right">
+                         <!-- Skills -->
+                         <div class="skills clearfix">
+                            <div class="developing-skill subtitle mb-70">
+                                <h3 class="mb-40">.<span>developing </span>skills</h3>
+                                <div class="single-skill">
+                                    <div class="skillbar-title"><span>Python</span></div>
+                                    <div class="skill-bar-percent">90%</div>
+                                    <div class="skillbar clearfix" data-parcent="90%">
+                                        <div class="skillbar-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="single-skill">
+                                    <div class="skillbar-title"><span>HTML/CSS</span></div>
+                                    <div class="skill-bar-percent">85%</div>
+                                    <div class="skillbar clearfix" data-parcent="85%">
+                                        <div class="skillbar-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="single-skill">
+                                    <div class="skillbar-title"><span>Flutter</span></div>
+                                    <div class="skill-bar-percent">75%</div>
+                                    <div class="skillbar clearfix" data-parcent="75%">
+                                        <div class="skillbar-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="single-skill">
+                                    <div class="skillbar-title"><span>Javascript</span></div>
+                                    <div class="skill-bar-percent">70%</div>
+                                    <div class="skillbar clearfix" data-parcent="70%">
+                                        <div class="skillbar-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="single-skill">
+                                    <div class="skillbar-title"><span>PHP</span></div>
+                                    <div class="skill-bar-percent">80%</div>
+                                    <div class="skillbar clearfix" data-parcent="80%">
+                                        <div class="skillbar-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="single-skill">
+                                    <div class="skillbar-title"><span>WordPress</span></div>
+                                    <div class="skill-bar-percent">90%</div>
+                                    <div class="skillbar clearfix" data-parcent="90%">
+                                        <div class="skillbar-bar"></div>
+                                    </div>
+                                </div>
                             </div>
-                            <h4 class="body-font">Marketing</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, doloribus repellendus.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                    <div class="single-service text-center">
-                        <div class="service-content">
-                            <div class="service-icon">
-                                <i class="fas fa-share-alt"></i>
-                            </div>
-                            <h4 class="body-font">Social Media</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, doloribus repellendus.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                    <div class="single-service text-center">
-                        <div class="service-content">
-                            <div class="service-icon">
-                                <i class="fas fa-chess"></i>
-                            </div>
-                            <h4 class="body-font">Consulting</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, doloribus repellendus.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- Services End -->        
+                             <div class="design-skill subtitle ">
+                                 <h3 class="mb-40">.<span>design </span>skills</h3>
+                                 <div class="single-skill">
+                                     <div class="skillbar-title"><span>Adobe Illustrator</span></div>
+                                     <div class="skill-bar-percent">80%</div>
+                                     <div class="skillbar clearfix" data-parcent="80%">
+                                         <div class="skillbar-bar"></div>
+                                     </div>
+                                 </div>
+                                 <div class="single-skill">
+                                     <div class="skillbar-title"><span>Adobe Photoshop</span></div>
+                                     <div class="skill-bar-percent">90%</div>
+                                     <div class="skillbar clearfix" data-parcent="90%">
+                                         <div class="skillbar-bar"></div>
+                                     </div>
+                                 </div>
+                                 <div class="single-skill">
+                                     <div class="skillbar-title"><span>Adobe XD</span></div>
+                                     <div class="skill-bar-percent">60%</div>
+                                     <div class="skillbar clearfix" data-parcent="60%">
+                                         <div class="skillbar-bar"></div>
+                                     </div>
+                                 </div>
+                                
+                             </div>
+                            
+                         </div> <!-- Skills End -->
+                     </div>
+                 </div>
+             </div>
+         </div>
+         <!--resume end-->
+
         <!-- Funfact Area -->
-        <div class="fun-fact">
+        <!--div class="fun-fact">
             <div class="row">
                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                     <div class="funfact funfact-mb text-center">
@@ -122,9 +244,10 @@
                     </div>
                 </div>
             </div>
-        </div> <!-- Funfact Area End -->
+        </div--> 
+        <!-- Funfact Area End -->
         <!-- Pricing Area -->
-        <div class="pricing subtitle mb-70">
+        <!--div class="pricing subtitle mb-70">
             <h3 class="mb-40">.<span>price</span> list</h3>
             <div class="row">
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
@@ -203,7 +326,7 @@
                     </div>
                 </div>
             </div>
-        </div> <!-- Pricing Area End -->        
+        </div--> <!-- Pricing Area End -->        
         <!-- Clients Testimonial -->
         <div class="clients-testimonial subtitle">
             <h3 class="mb-40">.<span>cool</span> feedback</h3>
@@ -246,12 +369,15 @@
             <img src="img/clients/5.png" alt="logo">
             <img src="img/clients/6.png" alt="logo">
         </div> <!-- Logo Carousel End -->
+
+       
     </main> <!-- Single page end -->
 
     {{ render_menu(render) }}
 
     <button id="back_to_top" class="btnEntrance pointer-href"><i class="fas fa-arrow-up"></i></button>
 
+  
     {{ render_js(render) }}
 </body>
 
