--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -67,8 +67,69 @@
 />
 
 <meta name="theme-color" content="#175AEA" />
-{% endmacro %} {% macro render_js(render) %}
+{% endmacro %} 
+
+{% macro render_js(render) %}
 <!-- All JS Called Here -->
+<script>
+  var TxtType = function(el, toRotate, period) {
+      this.toRotate = toRotate;
+      this.el = el;
+      this.loopNum = 0;
+      this.period = parseInt(period, 10) || 2000;
+      this.txt = '';
+      this.tick();
+      this.isDeleting = false;
+  };
+
+  TxtType.prototype.tick = function() {
+      var i = this.loopNum % this.toRotate.length;
+      var fullTxt = this.toRotate[i];
+
+      if (this.isDeleting) {
+      this.txt = fullTxt.substring(0, this.txt.length - 1);
+      } else {
+      this.txt = fullTxt.substring(0, this.txt.length + 1);
+      }
+
+      this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+      var that = this;
+      var delta = 200 - Math.random() * 100;
+
+      if (this.isDeleting) { delta /= 2; }
+
+      if (!this.isDeleting && this.txt === fullTxt) {
+      delta = this.period;
+      this.isDeleting = true;
+      } else if (this.isDeleting && this.txt === '') {
+      this.isDeleting = false;
+      this.loopNum++;
+      delta = 500;
+      }
+
+      setTimeout(function() {
+      that.tick();
+      }, delta);
+  };
+
+  window.onload = function() {
+      var elements = document.getElementsByClassName('typewrite');
+      for (var i=0; i<elements.length; i++) {
+          var toRotate = elements[i].getAttribute('data-type');
+          var period = elements[i].getAttribute('data-period');
+          if (toRotate) {
+            new TxtType(elements[i], JSON.parse(toRotate), period);
+          }
+      }
+      // INJECT CSS
+      var css = document.createElement("style");
+      css.type = "text/css";
+      css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+      document.body.appendChild(css);
+  };
+</script>
+
 <script src="../static/js/vendor/modernizr-3.7.1.min.js"></script>
 <script src="../static/js/vendor/jquery-3.4.1.min.js"></script>
 <script src="../static/js/popper.min.js"></script>
@@ -84,7 +145,9 @@
 <script src="../static/js/plugins.js"></script>
 <script src="../static/js/contact-form.js"></script>
 <script src="../static/js/main.js"></script>
-{% endmacro %} {% macro render_first(render) %}
+{% endmacro %} 
+
+{% macro render_first(render) %}
 <!--[if IE]>
   <p class="browserupgrade">
     You are using an <strong>outdated</strong> browser. Please
@@ -122,14 +185,15 @@
     <!-- My Social Links -->
     <div class="author-social-icons text-center">
       <ul>
+        <li><a href="https://github.com/olugbenga1234" target="_blank" class="pointer-href"><i class="fab fa-github"></i></a></li>
         <li>
           <a href="#" class="pointer-href"><i class="fab fa-facebook-f"></i></a>
         </li>
-        <!--li><a href="#" class="pointer-href"><i class="fab fa-twitter"></i></a></li-->
+        
         <!--li><a href="#" class="pointer-href"><i class="fas fa-basketball-ball"></i></a></li-->
         <!--li><a href="#" class="pointer-href"><i class="fab fa-behance"></i></a></li-->
         <li>
-          <a href="#" class="pointer-href"
+          <a href="https://www.linkedin.com/in/olugbenga-akeredolu-b53771160" target="_blank" class="pointer-href"
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </li>
@@ -161,81 +225,34 @@
     <!-- Menu Box -->
     <li class="nav-box mouseover-image-change active">
       <a href="index.html" class="pointer-large nav-link">
-        <span class="nav-btn active" data-text="home">.home</span>
+        <span class="nav-btn active" data-text="home">.Home</span>
       </a>
-      <div
-        class="mouseover-image"
-        style="background-image: url(img/nav-hover/home.png);"
-      ></div>
+
     </li>
     <!-- Menu Box End -->
     <!-- Menu Box -->
     <li class="nav-box mouseover-image-change">
       <a href="about.html" class="pointer-large nav-link">
-        <span class="nav-btn" data-text="about">.about</span>
+        <span class="nav-btn" data-text="about">.About me</span>
       </a>
-      <div
-        class="mouseover-image"
-        style="background-image: url(img/nav-hover/about.png);"
-      ></div>
+  
     </li>
     <!-- Menu Box End -->
-    <!-- Menu Box -->
-    <li class="nav-box mouseover-image-change">
-      <a href="resume.html" class="pointer-large nav-link">
-        <span class="nav-btn" data-text="resume">.resume</span>
-      </a>
-      <div
-        class="mouseover-image"
-        style="background-image: url(img/nav-hover/resume.png);"
-      ></div>
-    </li>
-    <!-- Menu Box End -->
+  
 
     <li class="nav-box mouseover-image-change">
       <a href="portfolio.html" class="pointer-large nav-link">
-        <span class="nav-btn" data-text="resume">.portfolio</span>
+        <span class="nav-btn" data-text="resume">.My portfolio</span>
       </a>
-      <div
-        class="mouseover-image"
-        style="background-image: url(img/nav-hover/resume.png);"
-      ></div>
+    
     </li>
 
     <!-- Menu Box -->
-    <li class="nav-box mouseover-image-change submenu-open">
-      <a class="pointer-large nav-link">
-        <span class="nav-btn" data-text="blog">.blog</span>
-      </a>
-      <!-- Sub Menu -->
-      <ul class="submenu">
-        <li class="nav-box">
-          <a href="blog.html" class="pointer-large">
-            <span class="nav-btn" data-text="blog">.blog</span>
-          </a>
-        </li>
-        <li class="nav-box">
-          <a href="blog-details.html" class="pointer-large">
-            <span class="nav-btn" data-text="blog details">.blog details</span>
-          </a>
-        </li>
-      </ul>
-      <!-- Submenu End -->
-      <div
-        class="mouseover-image"
-        style="background-image: url(img/nav-hover/blog.png);"
-      ></div>
-    </li>
-    <!-- Menu Box End -->
-    <!-- Menu Box -->
     <li class="nav-box mouseover-image-change">
       <a href="contact.html" class="pointer-large nav-link">
-        <span class="nav-btn" data-text="contact">.contact</span>
+        <span class="nav-btn" data-text="contact">.Contact me</span>
       </a>
-      <div
-        class="mouseover-image"
-        style="background-image: url(img/nav-hover/contact.png);"
-      ></div>
+      
     </li>
     <!-- Menu Box End -->
   </ul>
