--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -84,7 +84,7 @@
                                      </div>
                                      <div class="divider"></div>
                                      <div class="timeline-right">
-                                         <h6 class="item-title body-font">compTIA Linux+</h6>
+                                         <h6 class="item-company body-font">compTIA Linux+ Certification</h6>
                                          
                                      </div>
                                  </div>
@@ -95,7 +95,7 @@
                                      </div>
                                      <div class="divider"></div>
                                      <div class="timeline-right">
-                                         <h6 class="item-title body-font">LPIC-1</h6>
+                                         <h6 class="item-company body-font">LPIC-1 Certification</h6>
                                          
                                      </div>
                                  </div>
@@ -107,7 +107,7 @@
                                     </div>
                                     <div class="divider"></div>
                                     <div class="timeline-right">
-                                        <h6 class="item-title body-font">SUSE Linux Administrator</h6>
+                                        <h6 class="item-company body-font">SUSE Linux Administrator Certification</h6>
                                         
                                     </div>
                                 </div>
@@ -124,7 +124,7 @@
                                      </div>
                                      <div class="divider"></div>
                                      <div class="timeline-right">
-                                         <h6 class="item-title body-font">Linux Administrator</h6>
+                                         <h6 class="item-title body-font">As Linux Administrator</h6>
                                          
                                      </div>
                                  </div>
