--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -28,6 +28,14 @@
               <span><i class="fas fa-phone-alt"></i></span>
             </div>
             <div class="text-box">
+              <a href="tel:{{my_number}}" class="pointer-small">{{my_number}}</a>
+            </div>
+          </div>
+          <div class="contact-info-box">
+            <div class="icon-box">
+              <span><i class="fab fa-whatsapp"></i></i></span>
+            </div>
+            <div class="text-box">
               <a href="#" class="pointer-small">{{my_number}}</a>
             </div>
           </div>
@@ -36,7 +44,7 @@
               <span><i class="fas fa-paper-plane"></i></span>
             </div>
             <div class="text-box">
-              <a href="#" class="pointer-small">{{my_email}}</a>
+              <a href="mailto:{{my_email}}" class="pointer-small">{{my_email}}</a>
             </div>
           </div>
           <div class="contact-info-box">
