--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,7 +20,7 @@
         <!-- Author Name, My Name, Home Page Title -->
         <div class="home-title">
           <h3>Hello World! I’m</h3>
-          <h1 class="theme-color">Olugbenga Akeredolu</h1>
+          <h1 class="theme-color">Olugbenga Akeredolu.</h1>
           <h4></h4>
           <h4 class="typewrite"
             data-period="2000"
