--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -241,7 +241,7 @@
   
 
     <li class="nav-box mouseover-image-change">
-      <a href="portfolio.html" class="pointer-large nav-link">
+      <a href="#" class="pointer-large nav-link">
         <span class="nav-btn" data-text="resume">.My portfolio</span>
       </a>
     
@@ -261,3 +261,5 @@
 <!-- Menu Container End -->
 
 {% endmacro %}
+
+
