--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -31,12 +31,13 @@
           <div class="template-btn">
               
             <a href="contact.html" class="pointer-href">Hire me</a>
-            <a href="#" class="pointer-href">Download CV</a>
+            <a href="{{ url_for('.download_file') }}" class="pointer-href">Download CV</a>
+           
           </div>
         </div>
         <!-- Author Name, My Name, Home Page Title End -->
         <!-- Dribbble Slider -->
-        <div class="dribbble-btn pointer-href">
+        <!--div class="dribbble-btn pointer-href">
           <button
             data-toggle="tooltip"
             data-placement="left"
@@ -44,8 +45,8 @@
           >
             <i class="fas fa-basketball-ball"></i>
           </button>
-        </div>
-        <div class="dribbble-slider">
+        </div-->
+        <!--div class="dribbble-slider">
           <div class="dribbble-close-btn pointer-href">
             <i class="fas fa-times"></i>
           </div>
@@ -87,7 +88,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div-->
         <!-- Dribbble Slider End -->
       </div>
     </main>
