--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -12,7 +12,7 @@
     <main class="single-page">
       <!-- Page Header -->
       <div class="page-header">
-        <h2>.<span>contact</span></h2>
+        <h2>.<span>contact me</span></h2>
         <p class="contact-title-intro">
             Have any Enquiries?
             Feel free to contact me and I will get back to you as soon as possible.            
